[package]
name = "FileHandler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
DataStructures = { path = "../DataStructures" }
chrono = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
indicatif = "*"
num_cpus = "*"
crossbeam-channel = "*"
nom = "5.0.1"

[lib]
name = "FileHandler"
path = "FileHandler.rs"
